--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           src="img/pngtree-cartoon-yellow-pizza-illustration-png-image_4634672-removebg-preview.png"
           alt=""
         />
-        <h3>PizzaShop</h3>
+        <h3>Fornos Churra</h3>
       </div>
       <nav>
         <ul class="list-menu">
