--- a/index.html
+++ b/index.html
@@ -49,5 +49,105 @@
         </div>
       </div>
     </section>
+
+    <section class="sobre-nos" id="sobre-nos">
+      <div class="main">
+        <div class="contentsobre">
+          <h2>Sobre nós</h2>
+          <p>
+            is simply dummy text of the printing and typesetting industry. Lorem
+            Ipsum has been the industry's standard dummy text ever since the
+            1500s, when an unknown printer took a galley of type and scrambled .
+            is simply dummy text of the printing and typesetting industry. Lorem
+            Ipsum has been the industry's standard dummy text ever since the
+            1500s, when an unknown printer took a galley of type and scrambled
+          </p>
+        </div>
+        <div class="img-cozinha">
+          <img src="./img/cozinha.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="cardapio" id="cardapio">
+      <h2>Cardápio</h2>
+      <div class="itens-cardapio">
+        <div class="frango">
+          <img src="img/frango-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        <div class="calabresa">
+          <img src="img/calabresa-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        <div class="portuguesa">
+          <img src="img/portuguesa-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        <div class="strognoff">
+          <img src="img/strogonoff-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        <div class="chocolate">
+          <img src="img/chocolate-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        </div>
+        <div class="sensacao">
+          <img src="img/sensacao-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        </div>
+        <div class="confete">
+          <img src="img/confete-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        <div class="prestigio">
+          <img src="img/prestigio-removebg-preview.png" alt="" />
+          <div class="info">
+            <h3>Frango</h3>
+            <h4>6 Fatias <span>35,00</span></h4>
+            <h4>8 Fatias <span>45,00</span></h4>
+            <h4>12 Fatias <span>55,00</span></h4>
+            <button class="pedir">Pedir agora</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
