Implementando elementos css a section cardápio and adicionando o footer ao HTML

--- a/index.html
+++ b/index.html
@@ -72,82 +72,104 @@
     <section class="cardapio" id="cardapio">
       <h2>Cardápio</h2>
       <div class="itens-cardapio">
-        <div class="frango">
-          <img src="img/frango-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
+          <div class="frango item">
+            <img src="img/frango-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Frango</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div>
+          <div class="calabresa item">
+            <img src="img/calabresa-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Calabresa</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div>
+          <div class="portuguesa item">
+            <img src="img/portuguesa-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Portuguesa</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div>
+          <div class="strognoff item">
+            <img src="img/strogonoff-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Strognoff</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div> 
+          <div class="chocolate item">
+            <img src="img/chocolate-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Chocolate</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div>
           </div>
-        <div class="calabresa">
-          <img src="img/calabresa-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
+          <div class="sensacao item">
+            <img src="img/sensacao-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Sensação</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div>
+          </div>  
+          <div class="confete item">
+            <img src="img/confete-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Confete</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div>
+          <div class="prestigio item">
+            <img src="img/prestigio-removebg-preview.png" alt="" />
+            <div class="info">
+              <h3>Prestigio</h3>
+              <h4>6 Fatias <span>35,00</span></h4>
+              <h4>8 Fatias <span>45,00</span></h4>
+              <h4>12 Fatias <span>55,00</span></h4>
+              <button class="pedir">Pedir agora</button>
+            </div>
           </div>
-        <div class="portuguesa">
-          <img src="img/portuguesa-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
-          </div>
-        <div class="strognoff">
-          <img src="img/strogonoff-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
-          </div>
-        <div class="chocolate">
-          <img src="img/chocolate-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
-          </div>
+      </div>
+    </section>
+
+    <section class="contatos">
+      <h3>Contatos</h3>
+      <div class="contatos-secao">
+        <div>
+          <i class="bi bi-telephone"></i>
+          <span>(84) 989998929</span>
         </div>
-        <div class="sensacao">
-          <img src="img/sensacao-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
-          </div>
+        <div>
+          <i class="bi bi-instagram"></i>
+          <span>@fernandogomiss</span>
         </div>
-        <div class="confete">
-          <img src="img/confete-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
-          </div>
-        <div class="prestigio">
-          <img src="img/prestigio-removebg-preview.png" alt="" />
-          <div class="info">
-            <h3>Frango</h3>
-            <h4>6 Fatias <span>35,00</span></h4>
-            <h4>8 Fatias <span>45,00</span></h4>
-            <h4>12 Fatias <span>55,00</span></h4>
-            <button class="pedir">Pedir agora</button>
-          </div>
+        <div>
+          <i class="bi bi-facebook"></i>
+          <span>@fernandogomiss</span>
         </div>
       </div>
     </section>
+
+    <footer>
+      <h4>Desenvolido por fernandev</h4>
+    </footer>
   </body>
 </html>
